<resources>
    <string name="app_name">Nolimy</string>
    <string name="now_year">2023</string>
    <string name="t_continue">Continue</string>
    <string name="skip"><u>Skip</u></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="read">Read</string>
    <string name="search">Search</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="copied">Copied</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="text_read">You can scan a new card by attaching it to the back cover of your phone</string>
    <string name="text_reading">Attach the card to the back cover of the phone</string>
    <string name="no_cards">No cards any yet</string>
    <string name="nfc_disabled">NFC is disabled</string>
    <string name="write">Write</string>
    <string name="support">Support</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="email_support">nolimy.dev@gmail.com</string>
    <string name="subject_support">Nolimy Appeal</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add_content"><u>Add content</u></string>
    <string name="not_field">Not filled in</string>
</resources>