<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relative"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_grey">

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/horizontal_margin"
        android:paddingEnd="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin">
        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_image_button"
            android:src="@drawable/ic_back"
            android:padding="14dp"/>

        <Button
            android:id="@+id/button_support"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_image_button"
            android:text="@string/support"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:textColor="@color/white_30"
            android:fontFamily="@font/montserrat"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_top"
        android:visibility="gone"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:background="@drawable/bg_light_gray">
        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Andrey Avdeev"
            android:textSize="@dimen/title_size"
            android:fontFamily="@font/montserrat_semibold"
            android:singleLine="true"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"/>
        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="SEO and developer"
            android:textSize="@dimen/text_size"
            android:singleLine="false"
            android:layout_below="@id/text_name"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginTop="@dimen/center_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_description"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:overScrollMode="never"
            android:background="@color/light_gray"
            tools:itemCount="3"
            tools:listitem="@layout/view_card_content" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:paddingStart="@dimen/horizontal_margin"
        android:paddingEnd="@dimen/horizontal_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/center_margin"
        android:layout_below="@id/relative_center"
        android:text="@string/text_read"
        android:textColor="@color/white_30"
        android:textSize="@dimen/little_text_size"/>
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:background="@drawable/bg_gradient_button"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/save"
        android:textSize="@dimen/title_size" />

    <ImageView
        android:id="@+id/image_reading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_card_scan_phone"
        android:layout_below="@id/relative_top"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/center_margin"
        android:layout_above="@id/text_reading"/>
    <TextView
        android:id="@+id/text_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:gravity="center"
        android:text="@string/text_reading"
        android:textColor="@color/white_30"
        android:textSize="@dimen/little_text_size" />
</RelativeLayout>