<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/relative"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/horizontal_margin"
        android:paddingEnd="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin">
        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_image_button"
            android:src="@drawable/ic_back"
            android:padding="14dp"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_gradient_button"
            android:text="@string/save"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:visibility="gone"
            android:background="@drawable/bg_image_button"
            android:text="@string/delete"
            android:layout_toStartOf="@id/button_save"
            android:layout_marginEnd="15dp"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:textColor="@color/white_30"
            android:fontFamily="@font/montserrat"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@id/relative_top"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin">
        <androidx.cardview.widget.CardView
            android:id="@+id/view_center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_radius_small"
            app:cardElevation="0dp">
            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:src="@drawable/bg_first_gradient_card"/>
        </androidx.cardview.widget.CardView>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view_colors"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="none"
            android:overScrollMode="never">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_colors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/center_margin"
                    android:overScrollMode="never"
                    tools:itemCount="3"
                    tools:listitem="@layout/view_colors"/>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/liner1"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:scrollbars="none"
        android:overScrollMode="never">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:id="@+id/view_top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/vertical_margin"/>
            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/vertical_margin"
                android:background="@drawable/bg_edit_text"
                android:textColorHint="@color/white_30"
                android:textSize="@dimen/text_size"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white_30"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:paddingStart="@dimen/item_horizontal_margin"
                android:paddingEnd="@dimen/item_horizontal_margin"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:minHeight="45dp"
                android:layout_marginTop="@dimen/center_margin"
                android:layout_below="@id/edit_text_name"
                android:background="@drawable/bg_edit_text"
                android:textColorHint="@color/white_30"
                android:textSize="@dimen/text_size"
                android:singleLine="false"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white_30"
                android:textCursorDrawable="@drawable/bg_cursor"
                android:paddingStart="@dimen/item_horizontal_margin"
                android:paddingEnd="@dimen/item_horizontal_margin"
                android:hint="@string/description"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_text_description"
                android:overScrollMode="never"
                tools:itemCount="3"
                tools:listitem="@layout/view_content_edits"/>

            <Button
                android:id="@+id/button_add_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recycler"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="30dp"
                android:paddingEnd="0dp"
                android:text="@string/add_content"
                android:textColor="@color/white_selector"
                android:fontFamily="@font/montserrat_semibold"/>

            <View
                android:id="@+id/view_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/vertical_margin"
                android:layout_below="@id/button_add_content"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/vertical_margin"
        android:layout_below="@id/liner1"
        android:background="@drawable/bg_gradient_shadow_top"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/vertical_margin"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_gradient_shadow_bottom" />

</RelativeLayout>